reverted shift enter on chatbox and fixed chat message rendering

--- a/files/css/index.css
+++ b/files/css/index.css
@@ -369,7 +369,7 @@ padding: 5px;
   padding:10px;
   background-color: rgba(0,0,0,.2);
   word-wrap: break-word;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 .chat-message-mine .chat-message-message{
   margin-left: 5em;
